--- a/dragon-storm.html
+++ b/dragon-storm.html
@@ -44,7 +44,7 @@
       <div class="inner">
         <div class="link-wrapper">
           <h1 class="major">Dragon Storm</h1>
-          <a target="_blank" href="https://kingbloopy.github.io/Dragon_Storm/" class="button">Live Site</a>
+          <a target="_blank" href="https://kingbloopy.github.io/Dragon_Storm/" class="button">Play Game</a>
         </div>
         <span class="image fit"><img src="images/dragon2.png" alt="" /></span>
         <p>Dragon Storm is an interactive game in which users fly a dragon using key board movements in attempt to burn down structures
