--- a/plantsy.html
+++ b/plantsy.html
@@ -50,9 +50,29 @@
       <div class="inner">
         <div class="link-wrapper">
           <h1 class="major">Plantsy</h1>
-          <a target="_blank" href="https://plantsy-etsy.herokuapp.com/#/" class="button">Live Site</a>
+          <a target="_blank" href="https://github.com/kingbloopy/Plantsy" class="button">Github</a>
         </div>
         <span class="image fit"><img src="images/plansty2.png" alt="" /></span>
+        <div class="gif-grid">
+          <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+              src="https://giphy.com/embed/hJTEuUlM0NHXQqNKfB" width="100%" height="100%" style="position:absolute"
+              frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+          <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+              src="https://giphy.com/embed/AxgQS4z90Yd6Pg4BZZ" width="100%" height="100%" style="position:absolute"
+              frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+          <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+              src="https://giphy.com/embed/4BCXyL3MRw8zjpG9qe" width="100%" height="100%" style="position:absolute"
+              frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+            src="https://giphy.com/embed/rfy9fVPOKjWV2wwZVj" width="100%" height="100%" style="position:absolute"
+            frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+            src="https://giphy.com/embed/wvOnEhZfGVTlnt3OEK" width="100%" height="100%" style="position:absolute"
+            frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+            src="https://giphy.com/embed/4s45ILclsq7icqhjfG" width="100%" height="100%" style="position:absolute"
+            frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        </div>
         <p>Plantsy is a full-stack clone of Esty where users can create/sell products, leave reviews, and add products to their
         cart. / <a href="https://github.com/kingbloopy/Plantsy" target="_blank">Github</a> </p>
         <ul> Plantsy was programmed using:
@@ -78,7 +98,6 @@
         as well as Jbuilder to transpile rails data into JSON for a ReactJS frontend.</p>
         <p>I designed the majority of the graphic art/ designs using Procreate and ADOBE Illustrator, such as the logos and color
         schemes.</p>
-        <p><a href="https://github.com/kingbloopy/Plantsy" target="_blank">Github</a></p>
       </div>
     </section>
 
