--- a/mango-music.html
+++ b/mango-music.html
@@ -49,9 +49,12 @@
       <div class="inner">
         <div class="link-wrapper">
           <h1 class="major">Mango Music</h1>
-          <a target="_blank" href="https://mango-music-fsp.herokuapp.com/#/" class="button">Live Site</a>
+          <a target="_blank" href="https://github.com/MangoMusicMedia/mango-music" class="button">Github</a>
         </div>
         <span class="image fit"><img src="images/mango2.png" alt="" /></span>
+        <div style="width:100%;height:0;padding-bottom:63%;position:relative;"><iframe
+            src="https://giphy.com/embed/J0qNxfJ3xHLes8tSJj" width="100%" height="100%" style="position:absolute"
+            frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         <p>Mango Music is a social media platform where users can search for tracks, create posts, leave comments and like others
         posts on songs they love. I collaborated on this project alongside three other developers. / <a href="https://github.com/MangoMusicMedia/mango-music" target="_blank">Github</a></p>
         <ul>Mango Music was programmed using:
@@ -70,7 +73,6 @@
         also implemented BEM CSS naming convention to write cleaner, scalable, and more readable code.</p>
         <p>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, such as the graphic art, web layout,
         color schemes, etc.</p>
-        <p><a href="https://github.com/MangoMusicMedia/mango-music" target="_blank">Github</a></p>
       </div>
     </section>
 
