--- a/index.html
+++ b/index.html
@@ -140,52 +140,40 @@
 					<section id="about" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Whether it is design, graphic art, photography, making music or programming a new application, I have a creative side
+							<p>Whether it is project management, web design, or programming a new application, I have a creative side
 							that I have always enjoyed exploring and growing. I love learning about new technologies and challenging myself to think
 							logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
-							to craft an interface that is innovative, visually appealing, and intuitive for everyone.</p>
+							to craft a product that is innovative, visually appealing, and intuitive for everyone.</p>
+						<ul class="actions">
+							<li><a href="about-me.html" class="about-button button">Learn more about me</a></li>
+						</ul>
 							<h3>My Skills</h3>
 							<div class="features">
-								<section>
-									<a href="https://reactjs.org/" target="_blank">
-										<span class="icon solid"><i class="lang-icon devicon-react-original"></i></span>
-										<h3>ReactJS</h3>
-									</a>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Product Management</h3>
 								</section>
-								<section>
-									<a href="https://redux.js.org/" target="_blank">
-										<span class="icon solid"><i class="lang-icon devicon-redux-original"></i></span>
-										<h3>ReduxJS</h3>
-									</a>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Software Project Management</h3>
 								</section>
-								<section>
-									<a href="https://sass-lang.com/" target="_blank">
-										<span class="icon solid"><i class="lang-icon devicon-sass-original"></i></span>
-										<h3>SASS</h3>
-									</a>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Frontend Development</h3>
 								</section>
-								<section>
-									<a href="https://www.javascript.com/" target="_blank">
-										<span class="icon solid"><i class="lang-icon devicon-javascript-plain"></i></span>
-										<h3>Javascript ES6</h3>
-									</a>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>E-Commerce</h3>
 								</section>
-								<section>
-									<a href="https://rubyonrails.org/" target="_blank">
-										<span class="icon solid"><i class="lang-icon devicon-ruby-plain"></i></span>
-										<h3>Ruby on Rails</h3>
-									</a>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Figma</h3>
 								</section>
-								<section>
-									<a href="https://www.postgresql.org/" target="_blank">
-										<span class="icon solid"><i class="lang-icon devicon-postgresql-plain"></i></span>
-										<h3>PostgreSQL</h3>
-									</a>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Web Design</h3>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="about-me.html" class="about-button button">Learn more about me</a></li>
-							</ul>
 						</div>
 					</section>
 
