--- a/about-me.html
+++ b/about-me.html
@@ -42,8 +42,17 @@
           <a class="button" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a>
         </div>
         <p class="bio-text"><span class="image left"><img src="images/profile-pic2.jpg" alt="" /></span>Hello, and thanks for checking out my personal portfolio! <br>
-        I am originally from Santa Barbara, California although my desire to travel always keeps me moving and exploring new places around the world. Currently, I live in Southern Utah and love to be outdoors doing fun athletic activities whenever I have time. Some of these activities include hiking, biking, trail running, climbing, canyoneering, and more! Besides being outside, I have always had a creative side that includes many hobbies as well. Some of these hobbies that I enjoy are drawing, painting, photography, designing, graphic design / art, pottery, playing guitar, and making music. I actually self-taught myself how to play the guitar and ukulele during the Covid Pandemic and recently got a new electric guitar that I am excited to learn how to play better! Lastly, and most importantly, I am a big time cat lover and have a little Siamese kitty named Mishka. She is the best cat ever :)</p>
-        <p class="bio-text"><span class="image right"><img src="images/kitty.jpg" alt="" /></span>I have proficient developer experience working on large e-commerce website such as Michael Stars, Faherty, Lemlem, Veer, Kashwere, Vaay, This-Place, and Sente, utilizing React, Redux, Javascript, Shopify’s liquid templating language, Vue.js, HTML, CSS, SASS and Ruby on Rails. I love learning about new technologies and challenging myself to think logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive to craft an interface that is innovative, visually appealing, and intuitive for everyone.</p>
+        I am an experienced manager with a strong foundation in leading teams and collaborating with cross-functional groups to
+        execute complex product development cycles. My expertise spans digital strategy, project management, product ownership,
+        UI design, e-commerce, operations, client success, quality assurance testing and software engineering. I’ve thrived in
+        dynamic, multi-faceted roles, allowing me to wear many hats and contribute effectively to both the strategic and
+        technical aspects of projects. With a focus on clear communication, collaboration, and decision-making, I am skilled in
+        balancing multiple projects simultaneously while maintaining strong client relationships and delivering results in
+        fast-paced environments.
+        </p>
+        <p class="bio-text"><span class="image right"></span>Outside of work, you can find me embracing the outdoors—whether it’s mountain biking, climbing, hiking, trail running,
+        camping, river rafting, or playing my guitar. I’m passionate about living life to the fullest and bringing that same
+        energy and focus to my professional endeavors. </p>
       </div>
     </section>
 
