--- a/graphic-design.html
+++ b/graphic-design.html
@@ -61,7 +61,7 @@
               <img class="art-img" src="./images/art/joshua.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/koi.JPG" alt="">
+              <img class="art-img" src="./images/logos/bike.png" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/frog.JPG" alt="">
@@ -88,13 +88,28 @@
               <img class="art-img" src="./images/art/sb.jpg" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/logos/bike.png" alt="">
+              <img class="art-img" src="./images/art/koi.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/tiger.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/trout.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/flower.PNG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/gnomb.PNG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/jellies.PNG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/spider.PNG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/radio.PNG" alt="">
             </div>
           </ul>
         <p>I have always had a passion for Graphic Art and Design and love how it incorporates technology in order to acheive visions that could not be done by hand. I have experience using the Procreate App and ADOBE Illustrator but would love to learn more software design programs such as ADOBE Photoshop and more.</p>
@@ -104,26 +119,35 @@
         <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/Mango.png" alt="">
         </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/art/dreamcatcher.PNG" alt="">
+        </div>
         <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/plansty-logo.png" alt="">
         </div>
-        <div class="logo-pic pic-wrapper">
-          <img class="art-img" src="./images/logos/bizee.png" alt="">
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/art/desert.PNG" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
-          <img class="art-img" src="./images/logos/sol.png" alt="">
+          <img class="art-img" src="./images/logos/purrs.PNG" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
-          <img class="art-img" src="./images/logos/grand.png" alt="">
-        </div>
-        <div class="logo-pic pic-wrapper">
-          <img class="art-img" src="./images/logos/plantsy.png" alt="">
+          <img class="art-img" src="./images/logos/purr.png" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/storm.png" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
-          <img class="art-img" src="./images/logos/purr.png" alt="">
+          <img class="art-img" src="./images/logos/grand.png" alt="">
+        </div>
+        <div class="logo-pic pic-wrapper">
+          <img class="art-img" src="./images/logos/sol.png" alt="">
+        </div>
+        <div class="logo-pic pic-wrapper">
+          <img class="art-img" src="./images/logos/bizee.png" alt="">
+        </div>
+        <div class="logo-pic pic-wrapper">
+          <img class="art-img" src="./images/logos/plantsy.png" alt="">
         </div>
       </ul>
       <p>Along with graphic art, I enjoy making logo art for fun and for friends.</p>
