get in touch section

--- a/dragon-storm.html
+++ b/dragon-storm.html
@@ -48,7 +48,7 @@
         </div>
         <span class="image fit"><img src="images/dragon2.png" alt="" /></span>
         <p>Dragon Storm is an interactive game in which users fly a dragon using key board movements in attempt to burn down structures
-        for as long as they can.</p>
+        for as long as they can. / <a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
         <ul>Dragon Storm was programmed using:
           <li><i class="devicon-javascript-plain"></i> Javascript (ES6)</li>
           <li><i class="devicon-html5-plain"></i> HTML5</li>
@@ -60,9 +60,8 @@
         and dragon movements on ‘keyup’ and ‘keydown’ to create responsive and dynamic game play. I programmed asynchronous
         setTimeOut and setInterval to trigger various phases of the game-logic. Lastly, I used DOM manipulation to trigger the
         rendering of key-presses and clicks using a combination of CSS and JavaScript’s classList.</p>
-        <p>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, including all graphic art, designs,
-        colors, and layout.</p>
-        <p><a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
+        <p><b>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, including all graphic art, designs,
+        colors, and layout.</b></p>
       </div>
     </section>
 
