--- a/graphic-design.html
+++ b/graphic-design.html
@@ -112,7 +112,7 @@
               <img class="art-img" src="./images/art/radio.PNG" alt="">
             </div>
           </ul>
-        <p>I have always had a passion for Graphic Art and Design and love how it incorporates technology in order to acheive visions that could not be done by hand. I have experience using the Procreate App and ADOBE Illustrator but would love to learn more software design programs such as ADOBE Photoshop and more.</p>
+        <p>I have always had a passion for graphic art because I love how it incorporates technology in order to achieve visions that could not be done by hand.</p>
 
       <h1 class="major">Logo Design</h1>
       <ul class="logos art-wrapper">
@@ -150,7 +150,7 @@
           <img class="art-img" src="./images/logos/plantsy.png" alt="">
         </div>
       </ul>
-      <p>Along with graphic art, I enjoy making logo art for fun and for friends.</p>
+      <p>Along with graphic art, I enjoy making logos for fun and for friends.</p>
       </div>
     </section>
 
