--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner" id="landing">
 							<h1>Maggie McDonald</h1>
-							<p>I am an experienced Product Manager with a strong foundation in leading cross-function teams, with with a keen eye for detail and design.</p>
+							<p>I am an experienced Product Manager with a strong foundation in leading cross-function teams, and a keen eye for detail & design.</p>
 							<ul class="actions">
 								<li><a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a></li>
 								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
@@ -50,7 +50,7 @@
 					</section>
 
 				<!-- One -->
-					<section id="design" class="wrapper style2 spotlights">
+					<section class="wrapper style2 spotlights">
 
 					<section>
 						<a id="design" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt=""
@@ -58,7 +58,7 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Design Projects</h2>
-								<p>Over the years, I have collected a portfolio of graphic design art and logo designs</p>
+								<p>Over the years, I have collected a vast portfolio of graphic artwork and logo designs.</p>
 								<ul class="actions">
 									<li><a href="graphic-design.html" class="button">View Projects</a></li>
 								</ul>
