--- a/mango-music.html
+++ b/mango-music.html
@@ -30,12 +30,12 @@
     <nav>
       <ul class="nav-wrapper">
         <li><a href="index.html">Home</a></li>
-        <li><a href="plantsy.html">Plantsy</a></li>
+        <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="dragon-storm.html">Dragon Storm</a></li>
         <li><a href="dev-projects23.html">Dev '23</a></li>
         <li><a href="dev-projects22.html">Dev '22</a></li>        
+        <li><a href="plantsy.html">Plantsy</a></li>
         <li><a href="mango-music.html" class="active">Mango Music</a></li>
-        <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="about-me.html">About Me</a></li>
       </ul>
     </nav>
@@ -71,8 +71,8 @@
         <p>We utilized Spotify’s API to extract an array of musical information, and integrated search by song functionality. I
         integrated advanced SCSS (SASS) animations to create movement and professional design and experience. In addition, I
         also implemented BEM CSS naming convention to write cleaner, scalable, and more readable code.</p>
-        <p>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, such as the graphic art, web layout,
-        color schemes, etc.</p>
+        <p><b>I designed all of the graphic art/ designs using Procreate and ADOBE Illustrator, such as the graphic art, web layout,
+        color schemes, etc</b>.</p>
       </div>
     </section>
 
