--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<a id="dev23" href="dev-projects23.html" class="image"><img src="images/lemlem.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Developer Projects 2023</h2>
+									<h2>Developer Projects '23</h2>
 									<p>Professional developer projects for big-brand clients such as Lemlem, Veer, Kashwere and Sente.</p>
 									<ul class="actions">
 										<li><a href="dev-projects23.html" class="button">Learn more</a></li>
@@ -98,7 +98,7 @@
 							<a id="dev22" href="dev-projects22.html" class="image"><img src="images/mstars.jpeg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Developer Projects 2022</h2>
+									<h2>Developer Projects '22</h2>
 									<p>Professional developer projects for big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
 									<ul class="actions">
 										<li><a href="dev-projects22.html" class="button">Learn more</a></li>
