fix downloading issue

--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,7 @@
       <div class="inner">
         <div class="link-wrapper">
           <h1 class="major">About Me</h1>
-          <a class="button" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a>
+          <a class="button" href="https://www.linkedin.com/in/maggie-mae-mcdonald/" target="_blank">LinkedIn</a>
         </div>
         <p class="bio-text"><span class="image left"><img src="images/profile-pic2.jpg" alt="" /></span>Hello, and thanks for checking out my personal portfolio! <br>
         I am an experienced manager with a strong foundation in leading teams and collaborating with cross-functional groups to
@@ -54,6 +54,8 @@
         camping, river rafting, or playing my guitar. I’m passionate about living life to the fullest and bringing that same
         energy and focus to my professional endeavors. </p>
       </div>
+
+      <embed src="/assets/Maggie McDonald Resume.pdf" width="100%" height="800px" type="application/pdf">
     </section>
 
   </div>
