--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<li><a href="#plantsy">Plantsy</a></li>
 							<li><a href="#mango">Mango Music</a></li>
 							<li><a href="#about">About Me</a></li>
-							<li><a href="#contact">Get in touch</a></li>
+							<li><a href="#contact">Get In Touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -39,7 +39,7 @@
 							<h1>Maggie McDonald</h1>
 							<p>I am an experienced Product Manager with a strong foundation in leading cross-function teams, and a keen eye for detail & design.</p>
 							<ul class="actions">
-								<li><a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a></li>
+								<li><a class="button fit scrolly" href="#about">About Me</a></li>
 								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
 							</ul>
 						</div>
@@ -50,7 +50,7 @@
 					</section>
 
 				<!-- One -->
-					<section class="wrapper style2 spotlights">
+					<section id="top" class="wrapper style2 spotlights">
 
 					<section>
 						<a id="design" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt=""
@@ -145,7 +145,7 @@
 							logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
 							to craft a product that is innovative, visually appealing, and intuitive for everyone.</p>
 						<ul class="actions">
-							<li><a href="about-me.html" class="about-button button">Learn more about me</a></li>
+							<li><a href="about-me.html" class="about-button button">Learn more & View Resume</a></li>
 						</ul>
 							<h3>My Skills</h3>
 							<div class="features">
