--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner" id="landing">
 							<h1>Maggie McDonald</h1>
-							<p>I am an experienced Product Manager with a strong foundation in leading cross-function teams, and a keen eye for detail & design.</p>
+							<p>I am an experienced Product Manager with a strong foundation in leading cross-functional teams, as well as a keen eye for detail & design.</p>
 							<ul class="actions">
 								<li><a class="button fit scrolly" href="#about">About Me</a></li>
 								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
@@ -140,7 +140,7 @@
 					<section id="about" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Whether it is project management, web design, or programming a new application, I have a creative side
+							<p>Whether it is managing a project, designing a web interface, or programming a new application, I have a creative side
 							that I have always enjoyed exploring and growing. I love learning about new technologies and challenging myself to think
 							logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
 							to craft a product that is innovative, visually appealing, and intuitive for everyone.</p>
