--- a/about-me.html
+++ b/about-me.html
@@ -41,7 +41,7 @@
           <h1 class="major">About Me</h1>
           <a class="button" href="https://www.linkedin.com/in/maggie-mae-mcdonald/" target="_blank">LinkedIn</a>
         </div>
-        <p class="bio-text"><span class="image left"><img src="images/profile-pic2.jpg" alt="" /></span>Hello, and thank you for checking out my personal portfolio! <br>
+        <p class="bio-text"><span class="image left about-img"><img src="images/profile-pic2.jpg" alt="" /></span>Hello, and thank you for checking out my personal portfolio! <br>
         I am an experienced project manager with a strong foundation in leading teams and collaborating with cross-functional groups to
         execute complex product development cycles. My expertise spans digital strategy, project management, product ownership,
         UI design, e-commerce, operations, client success, quality assurance testing and software engineering. I’ve thrived in
