dragon storm mobile edits

--- a/dragon-storm.html
+++ b/dragon-storm.html
@@ -44,11 +44,14 @@
       <div class="inner">
         <div class="link-wrapper">
           <h1 class="major">Dragon Storm</h1>
-          <a target="_blank" href="https://kingbloopy.github.io/Dragon_Storm/" class="button">Play Game</a>
+          <div class="ds-button">
+            <span class="memo-text">*Please play on desktop device for best experience.</span>
+            <a target="_blank" href="https://kingbloopy.github.io/Dragon_Storm/" class="button">Play Game</a>
+          </div>
         </div>
         <span class="image fit"><img src="images/dragon2.png" alt="" /></span>
         <p>Dragon Storm is an interactive game in which users fly a dragon using key board movements in attempt to burn down structures
-        for as long as they can. / <a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
+        for as long as they can. <b>Please play on desktop device for best experience.</b> / <a href="https://github.com/kingbloopy/Dragon_Storm" target="_blank">Github</a></p>
         <ul>Dragon Storm was programmed using:
           <li><i class="devicon-javascript-plain"></i> Javascript (ES6)</li>
           <li><i class="devicon-html5-plain"></i> HTML5</li>
