--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#design">Design Projects</a></li>
 							<li><a href="#dragon-storm">Dragon Storm</a></li>
+							<li><a href="#figma24">Figma Prototypes '23</a></li>
 							<li><a href="#dev23">Developer Projects '23</a></li>
 							<li><a href="#dev22">Developer Projects '22</a></li>
 							<li><a href="#plantsy">Plantsy</a></li>
@@ -76,6 +77,20 @@
 									structures for as long as they can.</p>
 								<ul class="actions">
 									<li><a href="dragon-storm.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+
+					<section>
+						<a id="figma24" href="figma24.html" class="image"><img src="images/figma/thumbnail.jpg" alt=""
+								data-position="25% 25%" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Figma Prototypes '23</h2>
+								<p>Professional Figma web designs that combine creativity with functionality, delivering seamless user experiences across all devices.</p>
+								<ul class="actions">
+									<li><a href="figma24.html" class="button">Learn more</a></li>
 								</ul>
 							</div>
 						</div>
