--- a/dev-projects23.html
+++ b/dev-projects23.html
@@ -25,6 +25,7 @@
     <nav>
       <ul class="nav-wrapper">
         <li><a href="index.html">Home</a></li>
+        <li><a href="figma24.html">Figma '24</a></li>
         <li><a href="graphic-design.html">Design Projects</a></li>
         <li><a href="dragon-storm.html">Dragon Storm</a></li>
         <li><a href="dev-projects23.html" class="active">Dev '23</a></li>
