--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#figma24">Figma Prototypes '24</a></li>
 							<li><a href="#design">Design Projects</a></li>
 							<li><a href="#dragon-storm">Dragon Storm</a></li>
-							<li><a href="#figma24">Figma Prototypes '23</a></li>
 							<li><a href="#dev23">Developer Projects '23</a></li>
 							<li><a href="#dev22">Developer Projects '22</a></li>
 							<li><a href="#plantsy">Plantsy</a></li>
@@ -38,7 +38,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner" id="landing">
 							<h1>Maggie McDonald</h1>
-							<p>I am an experienced Product Manager with a strong foundation in leading cross-functional teams, as well as a keen eye for detail & design.</p>
+							<p>I am an experienced Creative & Technical Project Manager with a strong foundation in leading cross-functional teams through complex product development cycles.</p>
 							<ul class="actions">
 								<li><a class="button fit scrolly" href="#about">About Me</a></li>
 								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
@@ -52,6 +52,22 @@
 
 				<!-- One -->
 					<section id="top" class="wrapper style2 spotlights">
+
+					<section>
+						<a id="figma24" href="figma24.html" class="image"><img src="images/figma/thumbnail.jpg" alt=""
+								data-position="25% 25%" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Figma Prototypes '24</h2>
+								<p>Professional Figma web designs that combine creativity with functionality, delivering seamless user experiences
+									across all devices.</p>
+								<ul class="actions">
+									<li><a href="figma24.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+
 
 					<section>
 						<a id="design" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt=""
@@ -82,26 +98,12 @@
 						</div>
 					</section>
 
-					<section>
-						<a id="figma24" href="figma24.html" class="image"><img src="images/figma/thumbnail.jpg" alt=""
-								data-position="25% 25%" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Figma Prototypes '23</h2>
-								<p>Professional Figma web designs that combine creativity with functionality, delivering seamless user experiences across all devices.</p>
-								<ul class="actions">
-									<li><a href="figma24.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
 						<section>
 							<a id="dev23" href="dev-projects23.html" class="image"><img src="images/lemlem.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Developer Projects '23</h2>
-									<p>Professional developer projects for big-brand clients such as Lemlem, Veer, Kashwere and Sente.</p>
+									<p>Professional developer projects for big-brand e-commerce clients such as Lemlem, Veer, Kashwere and Sente.</p>
 									<ul class="actions">
 										<li><a href="dev-projects23.html" class="button">Learn more</a></li>
 									</ul>
@@ -114,7 +116,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Developer Projects '22</h2>
-									<p>Professional developer projects for big-brand clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
+									<p>Professional developer projects for big-brand e-commerce clients such as Michael Stars, Faherty, Vaay, and This-Place.</p>
 									<ul class="actions">
 										<li><a href="dev-projects22.html" class="button">Learn more</a></li>
 									</ul>
