remove embedded resume

--- a/about-me.html
+++ b/about-me.html
@@ -56,7 +56,7 @@
         energy and focus to my professional endeavors. </p>
       </div>
 
-      <embed src="/assets/Maggie McDonald Resume.pdf" width="100%" height="800px" type="application/pdf">
+      <!-- <embed src="/assets/Maggie McDonald Resume.pdf" width="100%" height="800px" type="application/pdf"> -->
     </section>
 
   </div>
