--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
 							to craft a product that is innovative, visually appealing, and intuitive for everyone.</p>
 						<ul class="actions">
-							<li><a href="about-me.html" class="about-button button">Learn more & View Resume</a></li>
+							<li><a href="about-me.html" class="about-button button">Learn More About Me</a></li>
 						</ul>
 							<h3>My Skills</h3>
 							<div class="features">
@@ -203,7 +203,7 @@
 								<section>
 									<div class="contact-details">
 										<a class="button primary fit email-me" href="mailto: maggiemae.mcd@gmail.com?subject=Love your work! Let's talk about a job." download>Email Me</a>
-										<a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a>
+										<!-- <a class="button fit" href="/assets/Maggie McDonald Resume.pdf" download>Download Resume</a> -->
 										<div class="social-links">
 											<a class="linkedin-row" target="_blank" href="https://www.linkedin.com/in/maggie-mae-mcdonald/">
 												<i class="devicon-linkedin-plain"></i>
