remove bee logo

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -114,6 +114,7 @@
             </div>
           </ul>
         <p>I have always had a passion for graphic art because I love how it incorporates technology in order to achieve visions that could not be done by hand.</p>
+      <h1 class="major">Brand Identity: Grandfolia</h1>
 
       <h1 class="major">Logo Design</h1>
       <ul class="logos art-wrapper">
@@ -143,9 +144,6 @@
         </div>
         <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/sol.png" alt="">
-        </div>
-        <div class="logo-pic pic-wrapper">
-          <img class="art-img" src="./images/logos/bizee.png" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/plantsy.png" alt="">
