--- a/graphic-design.html
+++ b/graphic-design.html
@@ -113,8 +113,18 @@
               <img class="art-img" src="./images/art/radio.PNG" alt="">
             </div>
           </ul>
-        <p>I have always had a passion for graphic art because I love how it incorporates technology in order to achieve visions that could not be done by hand.</p>
       <h1 class="major">Brand Identity: Grandfolia</h1>
+      <div class="box alt">
+        <div class="row gtr-uniform">
+          <div class="col-6"><span class="image fit"><img src="images/grandfolia/plants1.png" alt="" /></span></div>
+          <div class="col-6"><span class="image fit"><img src="images/grandfolia/plants2.png" alt="" /></span></div>
+        </div>
+      </div>
+      <p>As a Design Director for Grandfolia, I had the incredible opportunity to bring the brand to life. I led the website
+        design, created a custom logo, approved copywrite, and captured all the photography featured on the site. Working with a talented team, I directed and contributed to the creation of the floral
+        arrangements showcased throughout the website. This project was a rewarding blend of design, artistry, and storytelling.</p>
+      <a target="_blank" href="https://grandfolia.com/photo-gallery/?jtg-filter=all" class="button primary fit grandfolia">Grandfolia Portfolio</a>
+      <br>
 
       <h1 class="major">Logo Design</h1>
       <ul class="logos art-wrapper">
@@ -143,13 +153,15 @@
           <img class="art-img" src="./images/logos/grand.png" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
+          <img class="art-img" src="./images/grandfolia/grandfolia.png" alt="">
+        </div>
+        <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/sol.png" alt="">
         </div>
         <div class="logo-pic pic-wrapper">
           <img class="art-img" src="./images/logos/plantsy.png" alt="">
         </div>
       </ul>
-      <p>Along with graphic art, I enjoy making logos for fun and for friends.</p>
       </div>
     </section>
 
