--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner" id="landing">
 							<h1>Maggie McDonald</h1>
-							<p>I am an experienced, Creative Manager with a strong foundation in leading cross-functional teams through complex product development cycles.</p>
+							<p>I am an experienced Creative Manager with a strong foundation in leading cross-functional teams through complex product development cycles.</p>
 							<ul class="actions">
 								<li><a class="button fit scrolly" href="#about">About Me</a></li>
 								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
