udpdate some text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Design Projects</h2>
-								<p>Over the years, I have collected a vast portfolio of graphic artwork and logo designs.</p>
+								<p>Over the years I have created a diverse range of creative work, including graphic art, branding,
+								logo design, and photography</p>
 								<ul class="actions">
 									<li><a href="graphic-design.html" class="button">View Projects</a></li>
 								</ul>
