add images to about page

--- a/about-me.html
+++ b/about-me.html
@@ -42,19 +42,47 @@
           <h1 class="major">About Me</h1>
           <a class="button" href="https://www.linkedin.com/in/maggie-mae-mcdonald/" target="_blank">LinkedIn</a>
         </div>
-        <p class="bio-text"><span class="image left about-img"><img src="images/profile-pic2.jpg" alt="" /></span>Hello, and thank you for checking out my personal portfolio! <br>
-        I am an experienced project manager with a strong foundation in leading teams and collaborating with cross-functional groups to
-        execute complex product development cycles. My expertise spans digital strategy, project management, product ownership,
-        UI design, e-commerce, operations, client success, quality assurance testing and software engineering. I’ve thrived in
-        dynamic, multi-faceted roles, allowing me to wear many hats and contribute effectively to both the strategic and
-        technical aspects of projects. With a focus on clear communication, collaboration, and decision-making, I am skilled in
-        balancing multiple projects simultaneously while maintaining strong client relationships and delivering results in
-        fast-paced environments.
+        <p class="bio-text"><span class="image left about-img"><img src="images/personal/selfie.jpg" alt="" /></span>
+        I am an experienced director with a strong foundation in leading cross-functional teams through complex product
+        development cycles. My expertise spans <i>creative strategy, product ownership, digital marketing, project management,
+        UI/UX web design, branding, business operations, client success, quality assurance testing, frontend development</i> and
+        <i>software engineering</i>. I’ve thrived in dynamic, multi-faceted roles, allowing me to wear many hats and contribute
+        effectively to both the aesthetic and technical aspects of projects. With a focus on clear communication, collaboration,
+        decision-making, and creative problem solving, I am skilled in balancing multiple projects simultaneously while
+        delivering results in fast-paced environments.
         </p>
         <p class="bio-text"><span class="image right"></span>Outside of work, you can find me embracing the outdoors—whether it’s mountain biking, climbing, hiking, trail running,
         camping, river rafting, or playing my guitar. I’m passionate about living life to the fullest and bringing that same
         energy and focus to my professional endeavors. </p>
       </div>
+
+
+      <ul class="art-wrapper">
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/biking.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/backpack.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/mishka.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/jackson.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/ski.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/rafting.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/horses.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/personal/summit.jpg" alt="">
+        </div>
+      </ul>
 
       <!-- <embed src="/assets/Maggie McDonald Resume.pdf" width="100%" height="800px" type="application/pdf"> -->
     </section>
