--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 					<section>
-						<a id="design" href="graphic-design.html" class="image"><img src="images/art/frog.JPG" alt=""
+						<a id="design" href="graphic-design.html" class="image"><img src="images/art//designs.png" alt=""
 								data-position="25% 25%" /></a>
 						<div class="content">
 							<div class="inner">
