--- a/graphic-design.html
+++ b/graphic-design.html
@@ -41,6 +41,12 @@
         <h1 class="major">Graphic Art</h1>
           <ul class="art-wrapper">
             <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/snake.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/joshua.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
               <img class="art-img" src="./images/art/bee.JPG" alt="">
             </div>
             <div class="pic-wrapper">
@@ -59,9 +65,6 @@
               <img class="art-img" src="./images/art/rainbow.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/joshua.JPG" alt="">
-            </div>
-            <div class="pic-wrapper">
               <img class="art-img" src="./images/logos/bike.png" alt="">
             </div>
             <div class="pic-wrapper">
@@ -74,13 +77,13 @@
               <img class="art-img" src="./images/art/mushroom.JPG" alt="">
             </div>
             <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/tiger.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
               <img class="art-img" src="./images/art/plants.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/shark.JPG" alt="">
-            </div>
-            <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/snake.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/lion.JPG" alt="">
@@ -90,9 +93,6 @@
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/koi.JPG" alt="">
-            </div>
-            <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/tiger.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/trout.JPG" alt="">
@@ -107,12 +107,40 @@
               <img class="art-img" src="./images/art/jellies.PNG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/spider.PNG" alt="">
-            </div>
-            <div class="pic-wrapper">
               <img class="art-img" src="./images/art/radio.PNG" alt="">
             </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/buck.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/cacti.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/eye.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/fall.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/grafiti.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/hammerhead.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/koi-pond.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/lady.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/meeseeks.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/spider.PNG" alt="">
+            </div>
           </ul>
+
       <h1 class="major">Brand Identity: Grandfolia</h1>
       <div class="box alt">
         <div class="row gtr-uniform">
