--- a/graphic-design.html
+++ b/graphic-design.html
@@ -190,6 +190,115 @@
           <img class="art-img" src="./images/logos/plantsy.png" alt="">
         </div>
       </ul>
+
+      <h1 class="major">Photography</h1>
+      <ul class="art-wrapper">
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/underwater3.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/yosemite.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/thorns.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/eye2.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/arch.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/begonia.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/cacti2.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/coast.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/croc.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/delicate.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/falls.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/faux.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/dolphin.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/jtree.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/fishies.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/underwater.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/goldfish.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/jellies.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/fiddle.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/kitten.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/leaf-eye.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/succulents.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/orchid.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/pink.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/poki.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/anemone.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/spider.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/moss.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/sunset.jpg" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/river.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/train.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/underwater2.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/antigua.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/flowers.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/underwater4.JPG" alt="">
+        </div>
+      </ul>
       </div>
     </section>
 
