--- a/graphic-design.html
+++ b/graphic-design.html
@@ -38,7 +38,7 @@
     <!-- Main -->
     <section id="main" class="wrapper">
       <div class="inner">
-        <h1 class="major">Graphic Art</h1>
+        <h1 class="major">Graphic Artwork</h1>
           <ul class="art-wrapper">
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/snake.JPG" alt="">
