--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<div class="inner">
 								<h2>Design Projects</h2>
 								<p>Over the years I have created a diverse range of creative work, including graphic art, branding,
-								logo design, and photography</p>
+								logo design, and photography.</p>
 								<ul class="actions">
 									<li><a href="graphic-design.html" class="button">View Projects</a></li>
 								</ul>
